--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
               </div>
             </div>
-            <p class="hero-caption">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed diam nonummy nibh euismod</p>
+            <p class="hero-caption">We are IT Professionals</p>
           </div>
         </section>
 
