--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </div>
               <div class="hero-image">
                 <div class="profile-circle">
-                  <img src="images/Image.jpeg" alt="Gabriel Marcelo" onerror="this.src='images/Image.jpg'">
+                  <img src="images/Image.jpg" alt="Gabriel Marcelo" onerror="this.src='images/Image.jpg'">
                 </div>
               </div>
             </div>
