--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               </div>
               <div class="hero-image">
                 <div class="profile-circle">
-                  <img src="images/Image.jfif" alt="Gabriel Marcelo" onerror="this.src='images/Image.jfif'">
+                  <img src="images/Image.jfif" alt="Gabriel Marcelo"">
                 </div>
               </div>
             </div>
