--- a/profile.html
+++ b/profile.html
@@ -60,7 +60,7 @@
             <div class="profile-content">
               <div class="profile-image-container">
                 <div class="profile-image">
-                  <img id="profile-preview" src="images/gabriel-profile.jpg" alt="Gabriel Marcelo" onerror="this.src='images/placeholder.jpg'">
+                  <img id="profile-preview" src="images/Image.jfif" alt="Gabriel Marcelo" onerror="this.src='images/Image.jfif'">
                 </div>
                 <div class="profile-upload">
                   <form action="upload.php" method="post" enctype="multipart/form-data" id="upload-form">
