--- a/profile.html
+++ b/profile.html
@@ -76,9 +76,9 @@
                 <p class="profile-subtitle">IT Professional & Consultant</p>
                 
                 <div class="profile-bio">
-                  <p>With over 15 years of experience in the IT industry, Gabriel has helped numerous businesses optimize their technology infrastructure and improve their cybersecurity posture.</p>
-                  <p>Gabriel holds multiple certifications including CISSP, CompTIA Security+, and is a Microsoft Certified Solutions Expert. His expertise spans network design, cybersecurity, cloud migration, and IT strategy development.</p>
-                  <p>Based in San Francisco, Gabriel works with clients across the United States, providing customized IT solutions that align with business objectives and drive technological innovation.</p>
+                  <p>Im So Sigma</p>
+                  <p>Im So Sigma</p>
+                  <p>I love Lebron</p>
                 </div>
                 
                 <div class="profile-contact">
