--- a/profile.html
+++ b/profile.html
@@ -84,9 +84,9 @@
                 <div class="profile-contact">
                   <h3>Contact Information</h3>
                   <ul>
-                    <li><i class="icon-mail"></i> gabriel@gabrielmarcelo.com</li>
-                    <li><i class="icon-phone"></i> (123) 456-7890</li>
-                    <li><i class="icon-linkedin"></i> linkedin.com/in/gabrielmarcelo</li>
+                    <li><i class="icon-mail"></i> Lebronlover@Bomboclatt.net</li>
+                    <li><i class="icon-phone"></i> 911 </li>
+                    <li><i class="icon-linkedin"></i> Bomboclatt.net/GabrielMarcelo</li>
                   </ul>
                 </div>
               </div>
