--- a/profile.html
+++ b/profile.html
@@ -76,17 +76,17 @@
                 <p class="profile-subtitle">IT Professional & Consultant</p>
                 
                 <div class="profile-bio">
-                  <p>Im So Sigma</p>
-                  <p>Im So Sigma</p>
-                  <p>I love Lebron</p>
+                  <p>15 years experience of being a sigma</p>
+                  <p>Phd in glazing</p>
+                  <p>Gradutated from lebron james university</p>
                 </div>
                 
                 <div class="profile-contact">
                   <h3>Contact Information</h3>
                   <ul>
-                    <li><i class="icon-mail"></i> Lebronlover@Bomboclatt.net</li>
-                    <li><i class="icon-phone"></i> 911 </li>
-                    <li><i class="icon-linkedin"></i> Bomboclatt.net/GabrielMarcelo</li>
+                    <li><i class="icon-mail"></i> gabriel@gabrielmarcelo.com</li>
+                    <li><i class="icon-phone"></i> (123) 456-7890</li>
+                    <li><i class="icon-linkedin"></i> linkedin.com/in/gabrielmarcelo</li>
                   </ul>
                 </div>
               </div>
